[build-system]
requires = [
    "setuptools>=64",
    "setuptools-scm>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "panoptes-utils"
description = "Astronomical utilities for PANOPTES"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = { file = "LICENSE.txt" }
authors = [
    { name = "PANOPTES Team", email = "developers@projectpanoptes.org" }
]
dynamic = ["version"]
keywords = ["astronomy", "physics", "PANOPTES"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics"
]
dependencies = [
    "Deprecated",
    "astropy",
    "loguru",
    "numpy>=2",
    "pyserial>=3.4",
    "pytest-loguru",
    "python-dateutil",
    "rich",
    "requests",
    "ruamel.yaml",
    "typer",
]

[project.urls]
Homepage = "https://github.com/panoptes/panoptes-utils"
Documentation = "https://panoptes-utils.readthedocs.io"
"POCS Documentation" = "https://pocs.readthedocs.io"
"Project PANOPTES" = "https://www.projectpanoptes.org"
Forum = "https://forum.projectpanoptes.org"

[project.optional-dependencies]
config = [
    "fastapi>=0.115",
    "PyYAML",
    "requests",
    "scalpl",
    "uvicorn>=0.34",
]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
]
examples = [
    "matplotlib",
    "pandas",
    "seaborn",
    "streamz",
]
images = [
    "matplotlib",
    "photutils",
    "pillow>=9.1.1",
    "scipy",
    "sep",
    "watchfiles",
]
telemetry = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
]

[project.scripts]
panoptes-utils = "panoptes.utils.cli.main:app"

[dependency-groups]
testing = [
    "coverage",
    "httpx",
    "pycodestyle",
    "pytest",
    "pytest-cov",
    "pytest-doctestplus",
    "pytest-loguru",
    "pytest-remotedata>=0.3.1",
    "pytest_mpl",
    "python-dotenv",
    "tox",
]
lint = [
    "ruff>=0.5.0",
]
dev = [
    { include-group = "testing" },
    { include-group = "lint" },
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools_scm]
version_file = "src/panoptes/utils/_version.py"

[tool.pytest.ini_options]
addopts = [
    "--cov", "panoptes",
    "--cov-report", "term-missing:skip-covered",
    "--cov-report", "xml:build/coverage.xml",
    "--doctest-modules",
    "--strict-markers",
    "-vv",
    "-ra",
    "--test-databases", "memory",
]
norecursedirs = ["dist", "build", ".tox"]
testpaths = ["tests", "src"]
doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE", "ALLOW_UNICODE", "IGNORE_EXCEPTION_DETAIL"]
filterwarnings = [
    "ignore:elementwise == comparison failed:DeprecationWarning",
    "ignore::pytest.PytestDeprecationWarning",
]
markers = [
    "plate_solve: tests that require astrometry.net (i.e. solve-field).",
    "slow: marks tests as slow (deselect with '-m \"not slow\"').",
]

[tool.coverage.report]
show_missing = true
ignore_errors = true
exclude_lines = [
    "pragma: no cover",
    "noqa",
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 110
target-version = "py312"
extend-exclude = [
    "notebooks",
    "resources",
    "conf_files",
    "src/panoptes/utils/_version.py"
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
