[metadata]
name = panoptes-utils
description = Astronomical utilities for PANOPTES
author = PANOPTES Team
author-email = developers@projectpanoptes.org
license = mit
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
url = https://github.com/panoptes/panoptes-utils
project-urls =
    Documentation = https://panoptes-utils.readthedocs.org
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = linux
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: C
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
scripts =
    bin/cr2-to-jpg
    bin/panoptes-config-server
    bin/panoptes-messaging-hub
    bin/panoptes-solve-field
    bin/panoptes-develop

# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires = pyscaffold>=3.2a0,<3.3a0
# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires =
    astroplan
    astropy
    Flask
    google-cloud-bigquery[pandas,pyarrow]
    google-cloud-storage
    loguru
    matplotlib
    numpy
    pandas
    pendulum
    photutils
    Pillow
    pyserial
    PyYAML
    requests
    ruamel.yaml
    scalpl
    scipy
# The usage of test_requires is discouraged, see `Dependency Management` docs
# tests_require = pytest; pytest-cov
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
python_requires = >=3.7

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install panoptes-utils[PDF]` like:
# PDF = ReportLab; RXP
# Add here test requirements (semicolon/line-separated)
testing =
    pytest
    pytest-cov
    pycodestyle
    mocket
    coverage
    pytest-remotedata>=0.3.1'
social =
    tweepy
messaging =
    pyzmq

[options.entry_points]
# Add here console scripts like:
; console_scripts =
;     panoptes-config-server = bin.panoptes-config-server:main
# For example:
# console_scripts =
#     fibonacci = panoptes.utils.skeleton:run


[test]
# py.test options when running `python setup.py test`
# addopts = --verbose
extras = True

[tool:pytest]
addopts =
;    --doctest-modules
    --test-databases all
    -x
    -vv
    -rfes
norecursedirs =
    script
    resources
    dist
    build
    .tox
testpaths = tests src
;doctest_plus = enabled

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pycodestyle]
max-line-length = 100

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 3.2.3
package = utils
extensions =
    no_skeleton
    namespace
namespace = panoptes

[coverage:run]
branch = True
concurrency =
    multiprocessing
    threading
parallel = True

[coverage:paths]
source =
    src/
    */site-packages/

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:

ignore_errors = True